--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <header>
-      <nav><ul>
+      <nav>
+      <ul>
+      <li><a href="./index.html" title="Home" ><img src="./favicon.ico" alt="Home"></a></li>
       <li><a href="./page2.html" title="Tutorials" >Tutorials</a></li>
       <li><a href="#" title="References" >References</a></li>
       <li><a href="#" title="Exercise" >Exercises</a></li>
@@ -27,8 +29,10 @@
       <li><a href="#" title="Certificate" >Get Certified</a></li>
       <li><a href="#" title="Get Your Own Website With W3schools Webspaces " >Website</a></li>
       <li><a href="#" title="" >Log in</a></li>
-    </ul></nav></header>
-    <nav></nav>
+    </ul>
+  </nav>
+    </header>
+    
     <main>
     <h1>Learn to Code</h1>
     <p>With the world's largest web developer site.</p>
