--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="./styles.css">
+
     <title>Document</title>
   </head>
   <body>
@@ -24,7 +26,7 @@
           <li><a href="./page2.html" title="Tutorials" >Tutorials</a></li>
           <li><a href="#" title="References" >References</a></li>
           <li><a href="#" title="Exercise" >Exercises</a></li>
-          <li><a href="#" title="Videos" >Videos</a></li>
+      
           <li><a href="#" title="Go pro and unlock powerful features" >Pro</a></li>
           <li><a href="#" title="Certificate" >Get Certified</a></li>
           <li><a href="#" title="Get Your Own Website With W3schools Webspaces " >Website</a></li>
