--- a/page2.html
+++ b/page2.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Learn HTML</title>
   </head>
   <body>
     <header>
       <nav>
-        <ul>
-          <li>
-            <a href="./index.html" title="Home"
-              ><img src="favicon.ico" alt="Home"
-            /></a>
-          </li>
-          <li><a href="./page2.html" title="Tutorials">Tutorials</a></li>
-          <li><a href="#" title="References">References</a></li>
-          <li><a href="#" title="Exercise">Exercises</a></li>
-          <li><a href="#" title="Videos">Videos</a></li>
-          <li>
-            <a href="#" title="Go pro and unlock powerful features">Pro</a>
-          </li>
-          <li><a href="#" title="Certificate">Get Certified</a></li>
-          <li>
-            <a href="#" title="Get Your Own Website With W3schools Webspaces "
-              >Website</a
-            >
-          </li>
-          <li><a href="#" title="">Log in</a></li>
-        </ul>
+        <a href="./index.html" title="Home"
+          ><img src="./icon.jpeg" alt="Home"
+        /></a>
+
+        <a href="./page2.html" title="Tutorials">Tutorials</a>
+        <a href="#" title="References">References</a>
+        <a href="#" title="Exercise">Exercises</a>
+        <a href="#" title="Videos">Videos</a>
+
+        <a href="#" title="Go pro and unlock powerful features">Pro</a>
+
+        <div class="pinkbg">
+          <a href="#" title="Certificate">Get Certified</a>
+        </div>
+
+        <a href="#" title="Get Your Own Website With W3schools Webspaces "
+          >Website</a
+        >
+
+        <a href="#" title="">Log in</a>
       </nav>
     </header>
 
