--- a/index.html
+++ b/index.html
@@ -7,50 +7,71 @@
     <!-- <link rel="stylesheet" href="/style.css"> -->
 
     <!-- ERROR favicon not working -->
-    <link rel="icon" href="https:///github.com/abhi-2107/webgoal/main/favicon.ico">
+    <link
+      rel="icon"
+      href="https:///github.com/abhi-2107/webgoal/main/favicon.ico"
+    />
     <!-- problem solved -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,500;1,400&display=swap"
+      rel="stylesheet"
+    />
 
-<link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
 
     <title>Document</title>
   </head>
   <body>
     <header>
-    <nav>
-      <ul>
-          <li><a href="./index.html" title="Home" ><img src="./favicon.ico" alt="Home"></a></li>
-          <li><a href="./page2.html" title="Tutorials" >Tutorials</a></li>
-          <li><a href="#" title="References" >References</a></li>
-          <li><a href="#" title="Exercise" >Exercises</a></li>
-      
-          <li><a href="#" title="Go pro and unlock powerful features" >Pro</a></li>
-          <li><a href="#" title="Certificate" >Get Certified</a></li>
-          <li><a href="#" title="Get Your Own Website With W3schools Webspaces " >Website</a></li>
-          <li><a href="#" title="" >Log in</a></li>
-     </ul>
-   </nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html" title="Home"
+              ><img src="./favicon.ico" alt="Home"
+            /></a>
+          </li>
+          <li><a href="./page2.html" title="Tutorials">Tutorials</a></li>
+          <li><a href="#" title="References">References</a></li>
+          <li><a href="#" title="Exercise">Exercises</a></li>
+
+          <li>
+            <a href="#" title="Go pro and unlock powerful features">Pro</a>
+          </li>
+          <li class="pinkbg">
+            <a href="#" title="Certificate">Get Certified</a>
+          </li>
+          <li>
+            <a href="#" title="Get Your Own Website With W3schools Webspaces "
+              >Website</a
+            >
+          </li>
+          <li><a href="#" title="">Log in</a></li>
+        </ul>
+      </nav>
     </header>
-    
+
     <main>
-    <h1>Learn to Code</h1>
-    <p>With the world's largest web developer site.</p>
-    <form action=>
-    <input type="text" placeholder="Search our tutorials,e.g.HTML" >
-  </form>
-  <p>Not Sure Where To Begin</p> 
-  <p class="topic">HTML</p> 
-  <p>The language for building web pages</p>
-  <a href="#">Learn HTML</a>
-  <a href="#">Video Tutorial</a>
-  <a href="#">HTML References</a>
-  <a href="#">Buy Certificate </a>
+      <div class="first">
+        <h1>Learn to Code</h1>
+        <p class="pink1">With the world's largest web developer site.</p>
 
-</main>
-
+        <form action="input">
+          <input type="text" placeholder="Search our tutorials,e.g.HTML" />
+        </form>
+        <p>Not Sure Where To Begin</p>
+      </div>
+      <div class="second">
+        <p class="topic">HTML</p>
+        <p>The language for building web pages</p>
+        <a href="#">Learn HTML</a>
+        <a href="#">Video Tutorial</a>
+        <a href="#">HTML References</a>
+        <a href="#">Buy Certificate </a>
+      </div>
+    </main>
     <footer>
       <a href="#">COURSES</a>
       <a href="#">QUIZZES</a>
@@ -59,9 +80,18 @@
       <a href="#">SPACES</a>
       <a href="#">FOURAM</a>
       <a href="#">ABOUT</a>
-      <p>W3Schools is optimized for learning, testing, and training. Examples might be simplified to improve reading and basic understanding. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using this site, you agree to have read and accepted our  <a href="#">terms of use</a>,<a href="#">cookie and privacy polacy.  </a></p>
-      <p> <a href="#">Copyrigt 1999-2022</a> by Refuse Data.All Rights Reserved.  </p>
-      <img src="" alt="">
+      <p>
+        W3Schools is optimized for learning, testing, and training. Examples
+        might be simplified to improve reading and basic understanding.
+        Tutorials, references, and examples are constantly reviewed to avoid
+        errors, but we cannot warrant full correctness of all content. While
+        using this site, you agree to have read and accepted our
+        <a href="#">terms of use</a>,<a href="#">cookie and privacy polacy. </a>
+      </p>
+      <p>
+        <a href="#">Copyrigt 1999-2022</a> by Refuse Data.All Rights Reserved.
+      </p>
+      <img src="" alt="" />
     </footer>
   </body>
 </html>
