--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
       <div class="first">
         <h1>Learn to Code</h1>
         <p class="pink1">With the world's largest web developer site.</p>
+        <input type="text" class="search">
+        
 
-        <form action="input">
-          <input type="text" placeholder="Search our tutorials,e.g.HTML" />
-        </form>
         <p>Not Sure Where To Begin</p>
       </div>
       <div class="second">
