--- a/index.html
+++ b/index.html
@@ -57,10 +57,15 @@
       <div class="first">
         <h1>Learn to Code</h1>
         <p class="pink1">With the world's largest web developer site.</p>
-        <input type="text" class="search">
-        
 
-        <p>Not Sure Where To Begin</p>
+        <!-- need much more learning -->
+        <input
+          type="text"
+          placeholder="  Search our tutorials,e.g. HTML"
+          class="search"
+        />
+
+        <a href="#" class="guide">Not Sure Where To Begin?</a>
       </div>
       <div class="second">
         <p class="topic">HTML</p>
