--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               >Website</a
             >
           </li>
-          <li><a href="#" title="">Log in</a></li>
+          <li><a href="#" class="greenbg">Log in</a></li>
         </ul>
       </nav>
     </header>
