--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="./styles.css" />
 
-    <title>Document</title>
+    <title>W3 online web tutorials</title>
   </head>
   <body>
     <header>
