--- a/index.html
+++ b/index.html
@@ -4,52 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="/style.css"> -->
-
-    <!-- ERROR favicon not working -->
-    <link
-      rel="icon"
-      href="https:///github.com/abhi-2107/webgoal/main/favicon.ico"
-    />
-    <!-- problem solved -->
-
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,500;1,400&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./styles.css" />
-
     <title>W3 online web tutorials</title>
   </head>
   <body>
     <header>
+      <div class="home">
+        <a href="./index.html" title="Home"
+        ><img src="./favicon.ico" alt="Home"
+        /></a>
+      </div>
       <nav>
-        <ul>
-          <li>
-            <a href="./index.html" title="Home"
-              ><img src="./favicon.ico" alt="Home"
-            /></a>
-          </li>
-          <li><a href="./page2.html" title="Tutorials">Tutorials</a></li>
-          <li><a href="#" title="References">References</a></li>
-          <li><a href="#" title="Exercise">Exercises</a></li>
-
-          <li>
-            <a href="#" title="Go pro and unlock powerful features">Pro</a>
-          </li>
-          <li class="pinkbg">
-            <a href="#" title="Certificate">Get Certified</a>
-          </li>
-          <li>
-            <a href="#" title="Get Your Own Website With W3schools Webspaces "
-              >Website</a
-            >
-          </li>
-          <li><a href="#" class="greenbg">Log in</a></li>
-        </ul>
+        <div class="left-nav">
+          <ul>
+            <li><a href="./page2.html" title="Tutorials">Tutorials</a></li>
+            <li><a href="#" title="References">References</a></li>
+            <li> <a href="#" title="Exercise">Exercises</a></li>
+            <li><a href="#" title="Videos">Videos</a>            </li>
+          </ul>
+          
+        </div>
+        
+        <div class="right-nav">
+          <ul>
+            <li> <a href="#" title="Go pro and unlock powerful features">Pro</a></li>
+            <li class="pinkbg">              <a href="#" title="Certificate">Get Certified</a></li>
+            <li><a href="#" title="Get Your Own Website With W3schools Webspaces ">Website</a></li>
+            <li><a href="#" class="greenbg">Log in</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
 
